[package]
name = "yasna"
version = "0.1.3"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]

description = "ASN.1 library for Rust"
documentation = "https://qnighy.github.io/yasna.rs"
homepage = "https://github.com/qnighy/yasna.rs"
repository = "https://github.com/qnighy/yasna.rs"
readme = "README.md"
keywords = ["parser", "serialization"]
license = "MIT/Apache-2.0"
include = [
  "src/**/*.rs",
  "Cargo.toml",
]

[features]
default = ["bigint", "bitvec"]
bigint = ["num-bigint"]
bitvec = ["bit-vec"]

[dependencies.num-bigint]
version = "0.2"
optional = true

[dev-dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.bit-vec]
version = "0.4.3"
optional = true
