[package]
name = "yasna"
version = "0.1.3"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]

description = "ASN.1 library for Rust"
documentation = "https://qnighy.github.io/yasna.rs"
homepage = "https://github.com/qnighy/yasna.rs"
repository = "https://github.com/qnighy/yasna.rs"
readme = "README.md"
keywords = ["parser", "serialization"]
license = "MIT/Apache-2.0"
include = [
  "src/**/*.rs",
  "Cargo.toml",
]

[features]
default = []

[dependencies]

[dependencies.num]
version = "0.1.29"
optional = true

[dev-dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.bit-vec]
version = "0.4.0"
optional = true

[dependencies.chrono]
version = "0.2.16"
optional = true
